@@ -1,3 +1,4 @@
+* new WMSStatus plugin: Queue
 * code to shutdown the factory when there are no active queues. Default behavior is not to do it.
 * made the classad optional when WMS is Condor, instead of forcing it to be MATCH_APF_QUEUE
 * removed unneded import in factory.py that triggered undesired dependency to htcondor
